--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bulma": "^0.9.3",
     "lottie-react": "^2.1.0",
     "prettier-eslint-cli": "^5.0.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bulma-components": "^4.0.7",
     "react-dom": "^17.0.2",
