--- a/package.json
+++ b/package.json
@@ -1,32 +1,31 @@
 {
   "name": "portfolio",
   "homepage": "http://mustachipleb.github.io/",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "bulma": "^0.9.3",
-    "lottie-react": "^2.1.0",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
+    "@types/react-helmet": "^6.1.5",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.25",
+    "bulma": "^0.9.4",
+    "lottie-react": "^2.2.1",
+    "parcel": "^2.6.0",
     "prettier-eslint-cli": "^5.0.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-bulma-components": "^4.0.7",
-    "react-dom": "^17.0.2",
+    "react": "^18.1.0",
+    "react-bulma-components": "^4.1.0",
+    "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "styled-components": "^5.3.0",
-    "web-vitals": "^1.1.2"
+    "react-router-dom": "^6.3.0",
+    "styled-components": "^5.3.5",
+    "typescript": "^4.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "parcel serve src/index.html",
+    "build": "parcel build src/index.html",
     "lint": "eslint ./ --fix && prettier ./ --write",
-    "predeploy": "npm run build",
+    "predeploy": "yarn run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -56,8 +55,8 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gh-pages": "^3.2.3",
     "prettier": "2.3.2",
-    "prettier-eslint": "^13.0.0"
+    "prettier-eslint": "^13.0.0",
+    "process": "^0.11.10"
   }
 }
